<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary2"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_standard">

            <TextView
                android:id="@+id/cost_1_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_standard"
                android:text="@string/coaze_text1"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/cost_2_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cost_1_line"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_short"
                android:text="@string/coaze_text22"
                android:textColor="@color/text_color_grey_dark"
                android:textSize="15sp" />


            <LinearLayout
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cost_2_line"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cost_3_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_short"
                    android:layout_marginTop="@dimen/margin_short"
                    android:text="@string/coaze_text3"
                    android:textColor="@color/text_color_grey_dark"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/cost_3_line2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="@dimen/margin_short"
                    android:text="@string/coaze_text4"
                    android:textColor="@color/button_color_green"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/cost_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/marks1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginTop="50dp"
                android:layout_toLeftOf="@+id/cost_4_line"
                android:text="@string/coaze_text66"
                android:textColor="@color/button_color_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cost_4_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:layout_marginTop="60dp"
                android:text="@string/coaze_text55"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/cost_globe"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_world"
                android:visibility="gone" />

            <TextView
                android:id="@+id/marks2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="50dp"
                android:layout_toRightOf="@+id/cost_4_line"
                android:text="@string/coaze_text6"
                android:textColor="@color/button_color_blue"
                android:textSize="16sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cost_relativeLayout"
            android:layout_marginTop="@dimen/margin_slim">



            <TextView
                android:id="@+id/cost_5_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/coaze_text7"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:gravity="center"
                android:id="@+id/cost_6_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cost_5_line"
                android:layout_marginTop="@dimen/margin_short"
                android:layout_centerHorizontal="true"
                android:text="@string/coaze_text88"
                android:textColor="@color/text_color_grey_dark"
                android:textSize="15sp" />


            <LinearLayout
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cost_6_line"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cost_7_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cost_6_line"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="@dimen/margin_short"
                    android:text="@string/coaze_text100"
                    android:textColor="@color/text_color_grey_dark"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/cost_7_line2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cost_6_line"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="@dimen/margin_short"
                    android:text="@string/coaze_text10"
                    android:textColor="@color/text_color_red"
                    android:textSize="18sp" />


            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/costbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_standard"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:background="@color/button_color_blue"
            android:gravity="center"
            android:text="@string/coaze_done"
            android:textColor="#ffffff" />





    </RelativeLayout>

</RelativeLayout>