<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/libreExchangeHead"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/coaze_logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appLogo"
            android:layout_centerInParent="true"
            android:text="@string/activity_splash_title_line_one"
            android:textColor="@color/colorAccent"
            android:textSize="35sp" />



        <TextView
            android:id="@+id/appSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_standard"
            android:text="@string/activity_splash_title_line_two"
            android:textColor="@color/textColorPrimary"
            android:textSize="20sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/libreExchangeHead"
        android:layout_marginLeft="@dimen/margin_very_big"
        android:layout_marginRight="@dimen/margin_very_big"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userFirstName"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:ems="5"
            android:hint="First Name"
            android:visibility="invisible"
            android:backgroundTint="@color/colorAccent"
            android:inputType="text"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_color_grey_dark"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userLastName"
            android:layout_below="@+id/userFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:ems="5"
            android:hint="Last Name"
            android:backgroundTint="@color/colorAccent"
            android:visibility="gone"
            android:inputType="text"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_color_grey_dark"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userEmailLogin"
            android:layout_below="@+id/userLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:ems="5"
            android:hint="Email"
            android:inputType="textWebEmailAddress"
            android:backgroundTint="@color/colorAccent"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_color_grey_dark"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/userPasswordLogin"
            android:layout_below="@+id/userEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:ems="5"
            android:hint="Password"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorAccent"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="@color/text_color_grey_dark"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/submitButton"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userPasswordLogin"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corner_border_accent"
            android:onClick="performSubmit"
            android:text="LOG IN"
            android:textColor="@color/light_gray" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loginChoices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgot_password"
            android:padding="@dimen/margin_big"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgotPasswordText"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/margin_big"
            android:text="@string/sign_up"
            android:textColor="@color/textColorPrimary" />
    </RelativeLayout>

</RelativeLayout>